--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,3 +1,9 @@
 {
-    "islami": "إسلامي"
+    "islami": "إسلامي",
+    "quran":"القران",
+    "ahdadeth":"الاحاديث",
+    "radio":"الراديو",
+    "sebha":"التسبيح",
+    "settings":"الإعدادات",
+    "sura_name":"اسم السورة"
 }
