--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,9 @@
 {
-    "islami": "Islami"
+    "islami": "Islami",
+    "quran":"Quran",
+    "ahdadeth":"Ahadeth",
+    "radio":"Radio",
+    "sebha":"Sebha",
+    "settings":"Settings",
+    "sura_name":"Sura Name"
 }
