edit localization added settings-tab

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,5 +5,12 @@
     "radio":"الراديو",
     "sebha":"التسبيح",
     "settings":"الإعدادات",
-    "sura_name":"اسم السورة"
+    "sura_name":"اسم السورة",
+    "hadeth_name":"الاحاديث",
+    "language":"اللغة",
+    "english":"الانجليزية",
+    "arabic":"العربية",
+    "theming":"النمط",
+    "dark":"الوضع الليلي",
+    "light":"الوضع المضىء"
 }
